<resources>
    <string name="app_name">Heartone</string>
    <string name="login_info">Login with Spotify to get music recommendations based on your mood.</string>
    <string name="btn_string">Login with Spotify</string>
    <string name="take_picture">Take a picture</string>
    <string name="OR">OR</string>
    <string name="mood_select">Select a mood from below</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_playlist">Select one of your playlists.</string><string name="select_song">Suggestions for your mood.</string>
</resources>