<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".moodselection">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="215dp"
        android:layout_height="173dp"
        android:src="@drawable/undraw_handcrafts_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pictureAction"
        android:layout_width="237dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/camera_logo"
        android:drawableEnd="@drawable/chevron_right"
        android:elegantTextHeight="false"
        android:fontFamily="@font/montserrat_extrabold"
        android:paddingLeft="55px"
        android:paddingRight="55px"
        android:text="@string/take_picture"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/OR"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureAction"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/mood_select"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/moodHappy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureAction"
        app:layout_constraintVertical_bias="0.902" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/moodHappy"
        android:layout_width="237dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button_light"
        android:elegantTextHeight="false"

        android:fontFamily="@font/montserrat_extrabold"
        android:text="Happy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/moodAngry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureAction"
        app:layout_constraintVertical_bias="0.897" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/moodAngry"
        android:layout_width="237dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"

        android:background="@drawable/rounded_button_light"
        android:elegantTextHeight="false"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="Angry"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/moodSad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureAction"
        app:layout_constraintVertical_bias="0.971" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/moodSad"
        android:layout_width="237dp"
        android:layout_height="45dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/rounded_button_light"

        android:elegantTextHeight="false"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="Sad"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/moodNeutral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureAction"
        app:layout_constraintVertical_bias="0.744" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/moodNeutral"
        android:layout_width="237dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button_light"
        android:elegantTextHeight="false"

        android:fontFamily="@font/montserrat_extrabold"
        android:text="Neutral"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureAction"
        app:layout_constraintVertical_bias="0.55" />


</androidx.constraintlayout.widget.ConstraintLayout>